# SO3_EKF

./: CMakeLists.txt  README.md
doc/: doc.md
src/: basic.h  so3_ekf.h  test.cpp
src/sensor_sim/: imu.cpp  imu.h  param.h  simulator.h
